[project]
name = "comfyui_tinyterranodes"
description = "Customizable xyPlot, various pipe nodes, fullscreen image viewer based on node history, dynamic widgets, interface customization, and more."
version = "2.0.9"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/TinyTerra/ComfyUI_tinyterraNodes"

[tool.comfy]
PublisherId = "tinyterra"
DisplayName = "tinyterraNodes"
Icon = "images/icon.jpg"
Models = []
